# mathematrix

./: README.md  flake.nix  main.py  mainmenu.kv  mainmenu.py  pyproject.toml
src/modules/: generate.py
src/tests/: test.kv  test.py  test2.py  test3.kv  test3.py
