[tool.poetry]
name = "mathematrix"
version = "0.1.0"
description = "Mathematics problem generator for grade 1 - undergraduate level problems covering all topics of mathematics within those grades"
authors = ["heet-mewada <heetmewadapersonal@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
kivy = "^2.3.1"
sympy = "^1.14.0"
appdirs = "^1.4.4"
tinydb = "^4.8.2"
pyinstaller = "^6.16.0"
pytest = "^9.0.0"
buildozer = "^1.5.0"
matplotlib = "^3.10.7"
numpy = "^2.3.4"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
